{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "65665b65-271f-46a6-87be-d006d89171a9",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c021430f-d850-4d44-8afa-eaef4bc0bf03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "654ea72e-e192-4fbe-9a37-7d370efda62f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13f3928e-fdb3-4ef3-9b37-3e59949b710b",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c3622b74-dc7c-4148-9134-f0c8aea5129b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5319e61f-d858-49e8-928a-fb215733e4a0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d4babba3-8d36-44c8-859c-dd54fd48d161",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "de2fdc18-f2b9-4a66-883d-f6a99c847367",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7b840dcf-a03d-4da5-8f9e-27025fd2ddf0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Weapon",
            "id": "35e9cc50-62dc-48e7-b13e-cc9927a6859f",
            "actions": [
                {
                    "name": "AttackPress",
                    "type": "Value",
                    "id": "a0717508-a040-4769-902e-3d74182df511",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackRelease",
                    "type": "Value",
                    "id": "fe506bda-b65c-40ab-9d2f-80b0ddf4c923",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeWeaponState",
                    "type": "Button",
                    "id": "8daeed15-af27-4706-a5f3-5f334f3ddc98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "23bda3a8-9ca7-4a7d-b10d-665e081b5dc3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowPress",
                    "type": "Button",
                    "id": "44a03c58-aca7-4b81-97fd-c6eca422e05e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrowRelease",
                    "type": "Button",
                    "id": "fa3ed30a-6244-4e7b-bb47-05dc71339b0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot1",
                    "type": "Button",
                    "id": "200f56a6-7408-4466-b48e-5579d74e6f7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot2",
                    "type": "Button",
                    "id": "8dab73d7-1622-4056-8a64-71bbb3a076a1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot3",
                    "type": "Button",
                    "id": "57882988-c62b-4177-bd3a-75774986ab92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot4",
                    "type": "Button",
                    "id": "bda44f08-c582-490f-86dd-f60a680c16dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeSlot",
                    "type": "Value",
                    "id": "3be61b4c-2fcd-4330-bbee-13216ec1e025",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "be8476f9-270b-4614-ac8a-c5056aa813f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5d1c748-cc61-4529-8382-9747146d72a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "AttackPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fa59355-6976-4a4a-946b-2ad664c5de4a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ChangeWeaponState",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ede2c8e-48ff-4108-9c22-47dfcded38d7",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ThrowPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7acce02b-46f2-41c0-a1da-8ce0e19dcc39",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e867a0f4-380c-4cb9-8d10-a0ad1bbf767e",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df991077-f2b1-4a60-bf4c-81ad0e81c992",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d189e9e-2103-4d55-baa8-642ff7941321",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ChangeSlot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db83d568-2e13-4f9b-a4a9-26edc186f100",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ThrowRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71601a69-0a4c-44d3-b6ee-e768baa72988",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1384e046-a4e8-4d59-a730-ec301e19085a",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d732de6d-aa76-47b7-a5bd-50c468e924b4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d93c132b-0d3a-4dbe-9d0a-7a5c8b3aa035",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "AttackRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7bdf531a-284e-468d-aa69-89e2bdec2119",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}